# pmsh.cmk
# TODO: add emacs machinery, find cppunit with pkg-config

PROJECT(projectM-emacs)

SET(
    PMSH_SRCS
    pmsh.cc pulse.cc command.cc ConfigFile.cpp
) 
    

ADD_EXECUTABLE(pmsh main.cc ${PMSH_SRCS})

ADD_EXECUTABLE(test0 test.cc ${PMSH_SRCS})

ENABLE_TESTING()
ADD_TEST(test0 test0)

INCLUDE(FindPkgConfig.cmake)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(SDL)

pkg_search_module(LIBPULSE REQUIRED libpulse>=0.9.5)

if (LIBPULSE_FOUND)
MESSAGE(STATUS "[projectM-pulseaudio] pulse audio detected.")
else (LIBPULSE_FOUND)
MESSAGE(FATAL_ERROR "ERROR: Pulse Audio is NOT found. Please install pulse audio 0.9.8 or greater from www.pulseaudio.org.")
endif(LIBPULSE_FOUND)

if (${CMAKE_PROJECT_NAME} MATCHES ${PROJECT_NAME})

	ADD_DEFINITIONS(-DLINUX -DPROJECTM_PREFIX='"${LIBPROJECTM_PREFIX}"')
else (${CMAKE_PROJECT_NAME} MATCHES ${PROJECT_NAME})
	set(LIBPROJECTM_FOUND true)
	ADD_DEFINITIONS(-DLINUX -DPROJECTM_PREFIX='"${CMAKE_INSTALL_PREFIX}"')
endif(${CMAKE_PROJECT_NAME} MATCHES ${PROJECT_NAME})

ADD_DEFINITIONS(-DLINUX)

if (${CMAKE_PROJECT_NAME} MATCHES "PROJECTM_ROOT")
   set(PROJECTM_INCLUDE ${PROJECTM_ROOT_SOURCE_DIR}/libprojectM)
elseif (${CMAKE_PROJECT_NAME} MATCHES ${PROJECT_NAME})
   set(PROJECTM_INCLUDE ${LIBPROJECTM_INCLUDEDIR}/libprojectM)
   set(PROJECTM_LINK ${LIBPROJECTM_LDFLAGS})
endif (${CMAKE_PROJECT_NAME} MATCHES "PROJECTM_ROOT")

INCLUDE_DIRECTORIES(
  ${PROJECTM_INCLUDE} ${SDL_INCLUDE_DIR} ${LIBPULSE_INCLUDEDIR}
)
LINK_DIRECTORIES(${PROJECTM_LINK} ${LIBPULSE_LDFLAGS})

SET(
    PMSH_LIBS
    projectM pulse ${SDL_LIBRARY}
)

TARGET_LINK_LIBRARIES(pmsh ${PMSH_LIBS})
TARGET_LINK_LIBRARIES(test0 cppunit ${PMSH_LIBS})

INSTALL(TARGETS pmsh DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
